--- a/CostumeTest/Components/FormInfo.razor
+++ b/CostumeTest/Components/FormInfo.razor
@@ -7,24 +7,24 @@
 
     <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1>Gegevens</h1>
-        <form style="    margin-left: 23px;">
+        <form  method="POST" action="/Datum" style=" margin-left: 23px;">
             <div class="form-inline  form-group">
                 <label for="InputFullName">Volledig naam</label>
 
-                <input type="text" class="form-control" id="InputFullName" aria-describedby="FullName" placeholder="Volledige naam">
+                <input type="text" class="form-control" id="InputFullName" aria-describedby="FullName" placeholder="Volledige naam" required>
 
             </div>
             <div class="form-inline form-group">
                 <label for="exampleInputEmail1">Email      </label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email adres">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email adres" required>
 
             </div>
             <div class="form-inline  form-group">
                 <label for="InputAmount">Aantal personen</label>
-                <input type="number" class="form-control" id="InputAmount" aria-describedby="Amount" placeholder="6" min="1" max="6">
+                <input type="number" class="form-control" id="InputAmount" aria-describedby="Amount" placeholder="6" min="1" max="6" required>
             </div>
             <button  type="submit" class="btn btn-primary" style="float:right">
-               <a href="/Datum">Volgende</a>
+             Volgende
             </button>
         </form>
      
