--- a/CostumeTest/Pages/Datum.cshtml
+++ b/CostumeTest/Pages/Datum.cshtml
@@ -5,31 +5,24 @@
 @{
     ViewData["Title"] = "Datum";
 }
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="js/script.js"></script>
-
-<div style="overflow:hidden;">
-    <div class="form-group">
-        <div class="row">
-            <div class="col-md-8">
-                <div id="datetimepicker12"></div>
-            </div>
-        </div>
-    </div>
-
-</div>
-
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
+<script src="bootstrap-datepicker.XX.js" charset="UTF-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.nl-BE.min.js"></script>
 
 <script src="_framework/blazor.server.js"></script>
-<script type="text/javascript">
-    $(function () {
-        $('#datetimepicker12').datetimepicker({
-            inline: true,
-            sideBySide: true
-        });
-    });
-</script>
+
 @(await Html.RenderComponentAsync<Datum>(RenderMode.ServerPrerendered))
+<script type="text/javascript">
+    $('#datepicker').datepicker(
+    );
+
+    $("#datepicker").on("changeDate", function (event) {
+        $("#my_hidden_input").val(
+            $("#datepicker").datepicker('getFormattedDate')
+        )
+    });
+
+</script>
