--- a/CostumeTest/Pages/Shared/_Layout.cshtml
+++ b/CostumeTest/Pages/Shared/_Layout.cshtml
@@ -46,12 +46,11 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-
+    <div class="container">    
         <div class="stepwizard">
             <div class="stepwizard-row">
                 <div class="stepwizard-step">
-                    <button type="button" class="  btn-circle">1</button>
+                    <button type="button" class="  btn-circle">✓</button>
                     <p>Gegevens</p>
                 </div>
                 <div class="stepwizard-step">
@@ -79,8 +78,8 @@
 
     </div>
     <footer class="footer">
-
-        </footer>
+    
+    </footer>
 
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
