--- a/CostumeTest/wwwroot/css/site.css
+++ b/CostumeTest/wwwroot/css/site.css
@@ -56,11 +56,24 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-    color: #0366d6;
+    color: #fff;
 }
-
-.form-control {
-    margin-left: 38px;
+.form-control, .form-controls{
+    margin-left: 10%;
+}
+.form-controls {
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    width: 54%;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 #exampleInputEmail1 {
     margin-left: 101px;
