--- a/CostumeTest/Components/Datum.razor
+++ b/CostumeTest/Components/Datum.razor
@@ -7,7 +7,7 @@
     <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1>Datum</h1>
 
-        <div id="datepicker" data-date="today"></div>
+        <div id="datepicker" data-date="today" style="margin-left: 31%; "></div>
         <input type="hidden" id="my_hidden_input" />
 
         <button type="submit" class="btn btn-primary" style="float:left">
