--- a/CostumeTest/Components/Daypart.razor
+++ b/CostumeTest/Components/Daypart.razor
@@ -4,36 +4,40 @@
 @inject JsonFileProductService ProductService
 
 
-    <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
-        <h1> Kies dagdeel</h1>
+<div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
+    <h1> Kies dagdeel</h1>
 
-        <ul class="nav nav-pills" style="border: 1px solid #E6DBDA; width: 239px;border-radius: 5px;">
-            <li style="border-right:1px solid #E6DBDA;">
-                <a data-toggle="pill">
-                    <h4>Lunch</h4>
-                    <p>11:00 - 16:00</p>
-                </a>
-            </li>
-            <li>
-                <a data-toggle="pill">
-                    <h4>Diner</h4>
-                    <p>17:00 - 20:00</p>
-                </a>
-            </li>
+    <ul class="nav nav-pills" style="border: 1px solid #E6DBDA; width: 239px; margin-left: 30%; border-radius: 5px;">
+        <li style="border-right:1px solid #E6DBDA;">
+            <a data-toggle="pill">
+                <h4>Lunch</h4>
+                <p>11:00 - 16:00</p>
+            </a>
+        </li>
+        <li>
+            <a data-toggle="pill">
+                <h4>Diner</h4>
+                <p>17:00 - 20:00</p>
+            </a>
+        </li>
 
-        </ul>
-        
-        <button type="submit" class="btn btn-primary" style="float:left">
-            <a href="/Datum">Terug</a>
-        </button>
+    </ul>
 
-        <button type="submit" class="btn btn-primary" style="float:right">
-            <a href="/Tafels">Volgende</a>
-        </button>
-    </div>
+
+
+<button type="submit" class="btn btn-primary" style="background-color: #545871;
+    border: none; float:left">
+    <a style="color: #ffff;" href="/Datum">Terug</a>
+</button>
+
+<button type="submit" class="btn btn-primary" style="     background-color: #545871;
+    border: none; float:right">
+    <a style=" color: #ffff;" href="/Tafels">Volgende</a>
+</button>
+        </div>
 @code
 {
-  
+
 
 
 }
