--- a/CostumeTest/Components/FormInfo.razor
+++ b/CostumeTest/Components/FormInfo.razor
@@ -1,37 +1,47 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using CostumeTest.Models
 @using CostumeTest.Services
+@using CostumeTest.Controllers
 @inject JsonFileProductService ProductService
+
+
 
 
 
     <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1>Gegevens</h1>
-        <form  method="POST" action="/Datum" style=" margin-left: 23px;">
+        <form method="POST" action="Reservation" style=" margin-left: 23px;">
             <div class="form-inline  form-group">
-                <label for="InputFullName">Volledig naam</label>
+                <label for="Name">Volledig naam</label>
 
-                <input type="text" class="form-control" id="InputFullName" aria-describedby="FullName" placeholder="Volledige naam" required>
+                <input type="text" class="form-controls" @bind="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
 
             </div>
-            <div class="form-inline form-group">
-                <label for="exampleInputEmail1">Email      </label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email adres" required>
+            <div class="form-inline form-group ">
+                <label for="Email" style="margin-right:10%;">Email      </label>
+                <input type="email" class="form-controls" @bind="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
 
             </div>
             <div class="form-inline  form-group">
                 <label for="InputAmount">Aantal personen</label>
-                <input type="number" class="form-control" id="InputAmount" aria-describedby="Amount" placeholder="6" min="1" max="6" required>
+                <input type="number" class="form-control" @bind="Amount" aria-describedby="Amount" placeholder="6" min="1" max="6" required />
             </div>
-            <button  type="submit" class="btn btn-primary" style="float:right">
-             Volgende
+            <button type="submit" class="btn btn-primary" style="float:right">
+                Volgende
             </button>
         </form>
-     
+
     </div>
 
-@code
+    @code
 {
+[Parameter]
+    public string Name { get; set; }
+    public string Email { get; set; }
+    public string Amount { get; set; }
 
-
-}
+    private void ChangeTheYear()
+    {
+        Name = "Volledig Naam";
+    }
+    }
