--- a/CostumeTest/Components/ProductList.razor
+++ b/CostumeTest/Components/ProductList.razor
@@ -7,7 +7,8 @@
 
     <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1>Tafel kiezen</h1>
-        <div class="card-group" style=" background-image: url('images/tafel-van-zes.png');  width:500px; height:450px; ">
+        <div class="card-group" style=" background-image: url('images/tafel-van-zes.png');  width:500px; height:450px; margin-left: 69px;
+    margin-bottom: 36px; ">
 
             <div style=" margin-left:21%; margin-top: 7%;">
                 @for (i = 1; i <= 3; i++)
@@ -22,35 +23,38 @@
 
             <div style="margin-top: 7%;">
                 <button style=" border:none ;background-color:dimgray ; width: 47px; height: 87px; margin-left: 27px;
-    margin-right: 40px; " data-toggle="modal" data-target="#productModal" class="btn btn-primary">
+    margin-right: 40px; margin-top: 15px;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
                     4
                 </button>
             </div>
 
-            <div style="padding-left: 50%;height: 7%;">
+            <div style="padding-left: 50%;height: 7%; margin-top: -3%;
+">
                 <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px; margin-right:48px;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">6</button>
                 <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px; " data-toggle="modal" data-target="#productModal" class="btn btn-primary">5</button>
             </div>
 
-            <div style="      width: 27%; margin-left: 1%;margin-bottom: 24%;  margin-top: 6%;">
-                <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px; margin-left: 33px; margin-right: 33px;  margin-top: 20%;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
+            <div style="width: 27%; margin-left: 1%;margin-bottom: 24%;  margin-top: 3%;">
+                <button style=" border:none ;background-color:dimgray ;width: 58px;  height: 48px; margin-left: 25px;  margin-right: 33px;  margin-top: 17%;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
                     8
                 </button>
-                <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px; margin-left: 33px; margin-right: 33px;      margin-top: 45%;
-" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
+                <button style=" border:none ;background-color:dimgray ; width: 58px;  height: 48px;  margin-left: 25px;  margin-right: 33px;  margin-top: 31%;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
                     10
                 </button>
-                <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px;  margin-left: 50px; margin-right: 33px;   margin-top: 41%;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
+                <button style=" border:none ;background-color:dimgray;  width: 90px; height: 48px; margin-left: 25px; margin-right: 33px;   margin-top: 34%;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
                     11
                 </button>
             </div>
 
             <div style="  width: 19%; margin-left: 1%;   ">
-                <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px;  margin-left: 24px; margin-right: 6px;      margin-top: 43%;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
+                <button style=" border:none ;background-color:dimgray ; width: 58px;height: 46px;margin-left: 7px;margin-right: 6px; margin-top: 20%;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
                     7
                 </button>
-                <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px;  margin-left: 23px;  margin-right: 33px;  margin-top: 65%;
-" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
+                <button style=" border:none ;background-color:dimgray ; width: 59px;
+    height: 45px;
+    margin-left: 7px;
+    margin-right: 33px;
+    margin-top: 55%;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
                     9
                 </button>
 
