--- a/ReservationAdmin/Pages/Agenda.cshtml
+++ b/ReservationAdmin/Pages/Agenda.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model IndexModel
+@using ReservationAdmin
+@model PoenkModel
 @{
     ViewData["Title"] = "Home page";
 }
@@ -12,7 +13,7 @@
     </button>
     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse ">
         <ul class="navbar-nav flex-grow-1">
-            <li class="nav-item active ">
+            <li class="nav-item ">
                 <a class="nav-link   " asp-area="" asp-page="/Index">
                     <i class="fa fa-bar-chart  IconItem"></i>
                     Dashboard
@@ -24,8 +25,8 @@
                     Aanmaken Reservering
                 </a>
             </li>
-            <li class="nav-item ">
-                <a class="nav-link navItem" asp-area="" asp-page="/Agenda">
+            <li class="nav-item  active navItem">
+                <a class="nav-link " asp-area="" asp-page="/Agenda">
                     <i class="fa fa-calendar IconItem"></i>
                     Agenda
                 </a>
@@ -39,10 +40,10 @@
         </ul>
     </div>
 </div>
-<div style="background-color:#D5DAD7;">
-    <p style="    margin-left: 22%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Dashboard - overzicht</p>
+<div style="background-color:#D5DAD7; float :left; width: 35%;  height: 100vh;">
+    <p style="     margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Agenda</p>
 
-    <div style="    border-top: 1px solid;padding-bottom: 7px;     margin-left: 25%;
- color: #ffff;">
+    <div style="  border-top: 1px solid;padding-bottom: 7px;   margin-left: 2%; width: 95%; color: #ffff;">
 
     </div>
+
