--- a/ReservationAdmin/wwwroot/css/site.css
+++ b/ReservationAdmin/wwwroot/css/site.css
@@ -1,11 +1,13 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
 }
+
 
 /* Provide sufficient contrast against white background */
 a {
@@ -55,7 +57,6 @@ button.accept-policy {
 -------------------------------------------------- */
 html {
   position: relative;
-  min-height: 100%;
 }
 
 body {
@@ -69,3 +70,23 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.nav-link {
+    color: #fff;
+    font-weight: 400;
+}
+.navItem {
+    margin-bottom: 500px;
+}
+.IconItem {
+    color: #A5A4BF;
+}
+.active {
+    background-color: rgba(0,0,0,0.2);
+    border-left: 2px solid #A3A0FB;
+}
+    .active > .nav-link {
+        padding-left: 8px;
+    }
+    .active > .nav-link > .IconItem {
+        color: #A3A0FB;
+    }
