--- a/ReservationAdmin/wwwroot/css/site.css
+++ b/ReservationAdmin/wwwroot/css/site.css
@@ -90,3 +90,41 @@ body {
     .active > .nav-link > .IconItem {
         color: #A3A0FB;
     }
+
+
+.form-control, .form-controls {
+    margin-left: 10%;
+}
+
+.form-controls {
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    width: 54%;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #545871;
+    border-color: #252152;
+}
+
+    .btn-primary:hover {
+        color: #fff;
+        background-color: #545871;
+        border-color: #e9a8a6;
+    }
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+}
