--- a/CostumeTest/Components/Daypart.razor
+++ b/CostumeTest/Components/Daypart.razor
@@ -25,16 +25,24 @@
 
 
 
-<button type="submit" class="btn btn-primary" style="background-color: #545871;
+    <button type="submit" class="btn btn-primary" style="background-color: #545871;
     border: none; float:left">
-    <a style="color: #ffff;" href="/Datum">Terug</a>
-</button>
+        <a style="color: #ffff;" href="/Datum">Terug</a>
+    </button>
 
-<button type="submit" class="btn btn-primary" style="     background-color: #545871;
+    <button type="submit" class="btn btn-primary" style="     background-color: #545871;
     border: none; float:right">
-    <a style=" color: #ffff;" href="/Tafels">Volgende</a>
-</button>
-        </div>
+        <a style=" color: #ffff;" href="/Tafels">Volgende</a>
+    </button>
+</div>
+<!--
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+
+-->
+
 @code
 {
 
