--- a/CostumeTest/Pages/Shared/_Layout.cshtml
+++ b/CostumeTest/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 </head>
 <body style="background-color:#D5DAD7;">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:#43425D;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:#545871;">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index" style="color:white;">Reservering systeem</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
