--- a/ReservationAdmin/Pages/AanmakenReservering.cshtml
+++ b/ReservationAdmin/Pages/AanmakenReservering.cshtml
@@ -40,11 +40,65 @@
         </ul>
     </div>
 </div>
-<div style="background-color:#D5DAD7; float :left; width: 35%;     height: 100vh;
-">
+<div style="background-color:#D5DAD7; float :left; width: 35%;  height: 100vh;">
     <p style="     margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Aanmaken reservering</p>
 
-    <div style="  border-top: 1px solid;padding-bottom: 7px;   margin-left: 2%; width: 95%; color: #ffff;">
+    <div style="border-top: 1px solid;padding-bottom: 7px;   margin-left: 2%; width: 95%; ">
+        <h1>Gegevens</h1>
+        <div style="background-color: #ffffff;">
+            <form method="POST" action="Reservation" style=" margin-left: 23px;">
+                <div class="form-inline  form-group">
+                    <label for="Name">Volledig naam</label>
+
+                    <input type="text" class="form-controls" name="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
+
+                </div>
+                <div class="form-inline form-group ">
+                    <label for="Email" style="margin-right:10%;">Email      </label>
+                    <input type="email" class="form-controls" name="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
+
+                </div>
+                <div class="form-inline  form-group">
+                    <label for="InputAmount">Aantal personen</label>
+                    <input type="number" class="form-control" name="Amount" aria-describedby="Amount" placeholder="6" min="1" max="6" required />
+                </div>
+            </form>
+        </div>
+
+        <div>
+            <h1>Dagdeel</h1>
+            <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
+                <ul class="nav nav-pills" style="border: 1px solid #E6DBDA; width: 239px; margin-left: 30%; border-radius: 5px;">
+                    <li style="border-right:1px solid #E6DBDA;">
+                        <a data-toggle="pill">
+                            <h4>Lunch</h4>
+                            <p>11:00 - 16:00</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a data-toggle="pill">
+                            <h4>Diner</h4>
+                            <p>17:00 - 20:00</p>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+
+
+
+
 
     </div>
 
+    <button type="submit" class="btn btn-primary" style="float:right">
+        Volgende
+    </button>
+</div>
+
+<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  -->
+   
