--- a/CostumeTest/Components/Overview.razor
+++ b/CostumeTest/Components/Overview.razor
@@ -6,7 +6,14 @@
 
     <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1> Overzicht</h1>
-
+        <div class=" form-inline">
+            <label>Datum</label>
+            <label>Dagdeel</label>
+            <label>Volledig naam</label>
+            <label>Email</label>
+            <label>Aantal personen</label> 
+            <label>Tafel</label>
+        </div>
        
         
         <button type="submit" class="btn btn-primary" style="float:left">
