--- a/CostumeTest/Components/FormInfo.razor
+++ b/CostumeTest/Components/FormInfo.razor
@@ -14,17 +14,17 @@
             <div class="form-inline  form-group">
                 <label for="Name">Volledig naam</label>
 
-                <input type="text" class="form-controls" @bind="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
+                <input type="text" class="form-controls" name="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
 
             </div>
             <div class="form-inline form-group ">
                 <label for="Email" style="margin-right:10%;">Email      </label>
-                <input type="email" class="form-controls" @bind="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
+                <input type="email" class="form-controls" name="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
 
             </div>
             <div class="form-inline  form-group">
                 <label for="InputAmount">Aantal personen</label>
-                <input type="number" class="form-control" @bind="Amount" aria-describedby="Amount" placeholder="6" min="1" max="6" required />
+                <input type="number" class="form-control" name="Amount" aria-describedby="Amount" placeholder="6" min="1" max="6" required />
             </div>
             <button type="submit" class="btn btn-primary" style="float:right">
                 Volgende
