--- a/CostumeTest/Components/Overview.razor
+++ b/CostumeTest/Components/Overview.razor
@@ -8,6 +8,7 @@
         <h1> Overzicht</h1>
         <div class=" form-inline">
             <label>Datum</label>
+            <label></labeL>
             <label>Dagdeel</label>
             <label>Volledig naam</label>
             <label>Email</label>
