--- a/CostumeTest/Components/Datum.razor
+++ b/CostumeTest/Components/Datum.razor
@@ -6,17 +6,36 @@
 
     <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1>Datum</h1>
+        <form method="POST" action="Reservation" style=" margin-left: 23px;">
+            <!--
+        <div id="datepicker"data-date="today" style="margin-left: 31%; "></div>
+         <input  name="date" type="hidden" id="my_hidden_input" />
 
-        <div id="datepicker" data-date="today" style="margin-left: 31%; "></div>
-        <input type="hidden" id="my_hidden_input" />
+    -->
+            <div class="container">
+                <div class="row">
+                    <div class='col-sm-6'>
+                        <div class="form-group">
+                            <div class='input-group date' id='datetimepicker1'>
+                                <input type='text' name="date"class="form-control" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+          
+                </div>
+            </div>
 
-        <button type="submit" class="btn btn-primary" style="float:left">
-            <a href="/Index">Terug</a>
-        </button>
+            <button type="submit" class="btn btn-primary" style="float:left">
+                <a href="/Index">Terug</a>
+            </button>
 
-        <button type="submit" class="btn btn-primary" style="float:right">
-            <a href="/Dagdeel">Volgende</a>
-        </button>
+            <button type="submit" class="btn btn-primary" style="float:right">
+              Volgende
+            </button>
+        </form>
     </div>
 
    
