--- a/CostumeTest/Components/Overview.razor
+++ b/CostumeTest/Components/Overview.razor
@@ -1,18 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using CostumeTest.Models
 @using CostumeTest.Services
-@inject JsonFileProductService ProductService
+@using CostumeTest.Controllers
+@inject JsonFileProductService Reservation
 
 
     <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1> Overzicht</h1>
-        <div class=" form-inline">
+        <div class=" ">
             <label>Datum</label>
-            <label></labeL>
+            <label></label>
             <label>Dagdeel</label>
             <label>Volledig naam</label>
             <label>Email</label>
-            <label>Aantal personen</label> 
+            <label>Aantal personen</label>
             <label>Tafel</label>
         </div>
        
