--- a/CostumeTest/Pages/Dagdeel.cshtml
+++ b/CostumeTest/Pages/Dagdeel.cshtml
@@ -9,7 +9,38 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-@(await Html.RenderComponentAsync<Daypart>(RenderMode.ServerPrerendered))
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="_framework/blazor.server.js"></script>
+<form method="post">
+    <div style="background-color: #ffffff;  width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
+        <h1> Kies dagdeel</h1>
+
+        <ul class="nav nav-pills" style="border: 1px solid #E6DBDA; width: 239px; margin-left: 30%; border-radius: 5px;">
+            <li onclick=" SelectProduct()" style="border-right:1px solid #E6DBDA;">
+                <a data-toggle="pill">
+                    <h4>Lunch</h4>
+                    <p>11:00 - 16:00</p>
+                </a>
+            </li>
+            <li>
+                <a data-toggle="pill">
+                    <h4>Diner</h4>
+                    <p>17:00 - 20:00</p>
+                </a>
+            </li>
+
+        </ul>
+        <button class="btn btn-primary" style="background-color: #545871;
+    border: none; float:left">
+            <a style="color: #ffff;" href="/Datum">Terug</a>
+        </button>
+
+        <button type="submit" asp-page-handler="choose" class="btn btn-primary" style="background-color: #545871; border: none; float:right">
+            <a style=" color: #ffff;">Volgende</a>
+        </button>
+    </div>
+
+</form>
+    </div>
+
+
