--- a/CostumeTest/Pages/Datum.cshtml
+++ b/CostumeTest/Pages/Datum.cshtml
@@ -13,16 +13,40 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.nl-BE.min.js"></script>
 
 <script src="_framework/blazor.server.js"></script>
+<div >
+    @Model.info.Name
+    @Model.info.Email
+    @Model.info.Amount
+</div>
 
-@(await Html.RenderComponentAsync<Datum>(RenderMode.ServerPrerendered))
+<div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
+    <h1>Datum</h1>
+    <form method="POST" style=" margin-left: 23px;">
+        <div>
+            <!--
+    <input type="date"name="bday"/>
+        -->
+          
+            <input type="date" asp-for="info.date" class="form-controls" name="date" aria-describedby="FullName" placeholder="Volledige naam" required />
+
+            <div id="datepicker" data-date="today" style="margin-left: 31%; "></div>
+            <input name="date" type="hidden" id="my_hidden_input" />
+
+        </div>
+
+            <button type="submit" class="btn btn-primary" style="float:left">
+                <a href="/Index">Terug</a>
+            </button>
+
+            <button type="submit" class="btn btn-primary" style="float:right">
+                Volgende
+            </button>
+    </form>
+</div>
+
 <script type="text/javascript">
-    $('#datepicker').datepicker(
-    );
-
-    $("#datepicker").on("changeDate", function (event) {
-        $("#my_hidden_input").val(
-            $("#datepicker").datepicker('getFormattedDate')
-        )
+    $(function () {
+        $('#datetimepicker1').datetimepicker();
     });
-
 </script>
+
