--- a/CostumeTest/Pages/Index.cshtml
+++ b/CostumeTest/Pages/Index.cshtml
@@ -1,17 +1,29 @@
 ﻿@page
 @using ReservationGuest.Components
-
+@using ReservationGuest.Controllers
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
+<div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
+    <h1>Gegevens</h1>
+    <form method="post"  style=" margin-left: 23px;">
+        <div class="form-inline  form-group">
+            <label for="Name">Volledig naam</label>
+            <input type="text"  asp-for="info.Name" class="form-controls" name="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
+        </div>
+        <div class="form-inline form-group ">
+            <label for="Email" style="margin-right:10%;">Email      </label>
+            <input type="email" asp-for="info.Email"  class="form-controls" name="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
 
-<!-- Nodig onderdelen in de index.cshtml file-->
-<!-- Haalt de form gegevens op en geneert het in een html omgeving-->
-
-@(await Html.RenderComponentAsync<FormInfo>(RenderMode.ServerPrerendered))
-
-
-
-
+        </div>
+        <div class="form-inline  form-group">
+            <label for="InputAmount">Aantal personen</label>
+            <input type="number"   asp-for="info.Amount"class="form-control" name="Amount" aria-describedby="Amount" placeholder="6" min="1" max="6" required />
+        </div>
+        <button   type="submit" class="btn btn-primary" style="float:right">
+            Volgende
+        </button>
+    </form>
+</div>
 
