--- a/CostumeTest/Pages/Index.cshtml
+++ b/CostumeTest/Pages/Index.cshtml
@@ -5,6 +5,9 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<div class="progress" style="width: 65%; margin-left: 18%;">
+  <div class="progress-bar" role="progressbar" style="width: 35%; padding-left: 50px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
 <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
     <h1>Gegevens</h1>
     <form method="post"  style=" margin-left: 23px;">
@@ -19,7 +22,7 @@
         </div>
         <div class="form-inline  form-group">
             <label for="InputAmount">Aantal personen</label>
-            <input type="number"   asp-for="info.Amount"class="form-control" name="Amount" aria-describedby="Amount" placeholder="6" min="1" max="6" required />
+            <input type="number"   asp-for="info.Amount"class="form-control" name="Amount" aria-describedby="Amount" placeholder="0" min="1" max="6" required />
         </div>
         <button   type="submit" class="btn btn-primary" style="float:right">
             Volgende
