--- a/CostumeTest/Components/ProductList.razor
+++ b/CostumeTest/Components/ProductList.razor
@@ -28,8 +28,7 @@
                 </button>
             </div>
 
-            <div style="padding-left: 50%;height: 7%; margin-top: -3%;
-">
+            <div style="padding-left: 50%;height: 7%; margin-top: -3%;">
                 <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px; margin-right:48px;" data-toggle="modal" data-target="#productModal" class="btn btn-primary">6</button>
                 <button style=" border:none ;background-color:dimgray ;width: 30px; height: 35px; " data-toggle="modal" data-target="#productModal" class="btn btn-primary">5</button>
             </div>
