--- a/CostumeTest/Components/FormInfo.razor
+++ b/CostumeTest/Components/FormInfo.razor
@@ -6,15 +6,15 @@
 
     <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1>Gegevens</h1>
-        <form method="POST" asp-controller="Reservation" asp-action="GetGuestinfo"  style=" margin-left: 23px;">
+        <form method="POST" style=" margin-left: 23px;">
             <div class="form-inline  form-group">
                 <label for="Name">Volledig naam</label>
 
-                <input type="text" class="form-controls" name="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
+                <input type="text" asp-for="info.Name" class="form-controls" name="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
 
             </div>
             <div class="form-inline form-group ">
-                <label for="Email" style="margin-right:10%;">Email      </label>
+                <label for="Email" style="margin-right:10%;">Email</label>
                 <input type="email" class="form-controls" name="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
 
             </div>
