--- a/CostumeTest/Components/Component.razor
+++ b/CostumeTest/Components/Component.razor
@@ -1,7 +1,8 @@
-﻿@using Microsoft.AspNetCore.Components.Web;
-@using System.Diagnostics;
-@using ReservationAdmin.Models;
-@page "/button"
+﻿@using Microsoft.AspNetCore.Components.Web
+@using System.Diagnostics
+@using System.Data;
+@using ReservationGuest.Models;
+
 @using Microsoft.JSInterop;
 @inject IJSRuntime JsRuntime;
 
@@ -10,23 +11,25 @@
 <form id="form1" runat="server">
     <div id="div1" class="divs" style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
         <h1>Gegevens</h1>
-        <div style=" margin-left: 23px;">
+        <div style="padding: 30px; background-color: #ffffff;">
             <div class="form-inline  form-group">
                 <label for="Name">Volledig naam</label>
-                <input type="text" asp-for="info.Name" class="form-controls1" name="Name" aria-describedby="FullName" placeholder="Volledige naam" required />
+
+                <input type="text" class="form-controls" @bind="CreateRes.FullName" aria-describedby="FullName" placeholder="Volledige naam" required />
 
             </div>
             <div class="form-inline form-group ">
                 <label for="Email" style="margin-right:10%;">Email      </label>
-                <input type="email" asp-for="info.Email" class="form-controls1" name="Email" aria-describedby="emailHelp" placeholder="Email adres" required />
+                <input type="email" class="form-controls" @bind="CreateRes.Email" aria-describedby="emailHelp" placeholder="Email adres" required />
 
             </div>
             <div class="form-inline  form-group">
                 <label for="InputAmount">Aantal personen</label>
-                <input type="number" asp-for="info.Amount" class="form-controls1" name="Amount" aria-describedby="Amount" placeholder="0" min="1" max="6" required />
+                <input type="number" class="form-control" @bind="CreateRes.Amount" aria-describedby="Amount" placeholder="0" min="1" max="6" required />
             </div>
-            <input id="2" type="button" value="volgende" class="buttons" @onclick="ShowAlert" style="float:right" />
+
         </div>
+        <input id="2" type="button" value="volgende" class="buttons btn btn-primary" @onclick="NextDiv" style="float:right" />
     </div>
 </form>
 
@@ -37,24 +40,39 @@
         <h1>Datum</h1>
         <div style=" margin-left: 23px;">
             <div>
-                <input type="date" asp-for="info.date" class="form-controls2" name="date" aria-describedby="FullName" placeholder="Volledige naam" required />
-
-                <div id="datepicker" data-date="today" style="margin-left: 31%; "></div>
-                <input name="date" type="hidden" id="my_hidden_input" />
-
+                <div>
+                    Selected Date: <span id="selected-date"></span>
+                    <br />
+                    <br />Value of hidden field: <span id="hidden-val"></span>
+                    <br />
+                </div>
+                <div class="col-lg-8 datepicker_area" style="background: red;">
+                    <div style="overflow:hidden;">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-8 WHY">q
+                                    <div id="datetimepicker" data-date="12/03/2012 12:00 PM"></div>
+                                    <input type="hidden" name="date" id="my_hidden_input" value="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div id="datetimepicker" data-date="12/03/2012 12:00 PM">
+                        <input type="hidden" name="date" id="my_hidden_input" value="">
+                    </div>
+                </div>
             </div>
-
-            <input id="1" type="button" value="vorige" class="buttons" style="float:left" />
-
-            <input @onclick="NextDiv" id="3" type="button" value="volgende" class="buttons" style="float:right" />
-        </div>
+          <input @onclick="NextDiv" id="3" type="button" value="volgende" class="buttons btn btn-primary" style="float:right" />
+      </div>
     </div>
 </form>
 
 <form method="post">
     <div id="div3" class="divs CHidden" style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
 
-        <div  class="Daypart-div">
+        <div class="Daypart-div">
             <h4>Dagdeel</h4>
             <div>
                 <div class="Daypart">
@@ -68,92 +86,143 @@
                     </button>
                 </div>
 
-                <input id="3" type="button" value="volgende" class="buttons" @onclick="ShowAlert" style="float:right" />
+                <input id="3" type="button" value="volgende" class="buttons btn btn-primary" @onclick="NextDiv" style="float:right" />
 
             </div>
         </div>
-     </div>
+    </div>
 </form>
 <form>
-
-    <div id="div4" class="divs Table-div">
-
+    <div id="div4" class="divs CHidden TableGroupDIV">
         <h1>Tafel kiezen</h1>
         <div class="Tafel   card-group" style=" background-image: url('images/tafel-van-zes.png');  width:500px; height:450px; margin-left: 69px;
         margin-bottom: 36px; ">
 
             <div style=" margin-left:21%; margin-top: 7%;">
 
-                <button @onclick="(e => SelectedTable(1))" style="width: 47px;
+                <button type="button" @onclick="(e => SelectedTable(1))" style="width: 47px;
         height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel tafels btn btn-primary">
                     1
                 </button>
 
-                <button @onclick="(e => SelectedTable(2))" style="width: 47px;
+                <button type="button" @onclick="(e => SelectedTable(2))" style="width: 47px;
         height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel btn btn-primary">
                     2
                 </button>
-                <button @onclick="(e => SelectedTable(3))" style="width: 47px;
+                <button type="button" @onclick="(e => SelectedTable(3))" style="width: 47px;
         height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel btn btn-primary">
                     3
                 </button>
             </div>
 
             <div style="margin-top: 7%;">
-                <button class="Tafel  btn btn-primary" @onclick="(e => SelectedTable(4))" style="width: 47px; height: 87px; margin-left: 27px; margin-right: 40px; margin-top: 15px;">
+                <button type="button" class="Tafel  btn btn-primary" @onclick="(e => SelectedTable(4))" style="width: 47px; height: 87px; margin-left: 27px; margin-right: 40px; margin-top: 15px;">
                     4
                 </button>
             </div>
 
             <div style="padding-left: 50%;height: 7%; margin-top: -3%;">
-                <button @onclick="(e => SelectedTable(5))" style="width: 30px; height: 35px; margin-right:48px;" class=" Tafel btn btn-primary">6</button>
-                <button @onclick="(e => SelectedTable(6))" style="width: 30px; height: 35px; " class=" Tafel btn btn-primary">5</button>
+                <button type="button" @onclick="(e => SelectedTable(5))" style="width: 30px; height: 35px; margin-right:48px;" class=" Tafel btn btn-primary">6</button>
+                <button type="button" @onclick="(e => SelectedTable(6))" style="width: 30px; height: 35px; " class=" Tafel btn btn-primary">5</button>
             </div>
 
             <div style="width: 27%; margin-left: 1%;margin-bottom: 24%;  margin-top: 3%;">
-                <button @onclick="(e => SelectedTable(8))" style="width: 58px;  height: 48px; margin-left: 25px;  margin-right: 33px;  margin-top: 17%;" class=" Tafel btn btn-primary">
+                <button type="button" @onclick="(e => SelectedTable(8))" style="width: 58px;  height: 48px; margin-left: 25px;  margin-right: 33px;  margin-top: 17%;" class=" Tafel btn btn-primary">
                     8
                 </button>
-                <button @onclick="(e => SelectedTable(10))" style="width: 58px;  height: 48px;  margin-left: 25px;  margin-right: 33px;  margin-top: 31%;" class=" Tafel btn btn-primary">
+                <button type="button" @onclick="(e => SelectedTable(10))" style="width: 58px;  height: 48px;  margin-left: 25px;  margin-right: 33px;  margin-top: 31%;" class=" Tafel btn btn-primary">
                     10
                 </button>
-                <button @onclick="(e => SelectedTable(11))" style=" width: 90px; height: 48px; margin-left: 25px; margin-right: 33px;   margin-top: 34%;" class="Tafel  btn btn-primary">
+                <button type="button" @onclick="(e => SelectedTable(11))" style=" width: 90px; height: 48px; margin-left: 25px; margin-right: 33px;   margin-top: 34%;" class="Tafel  btn btn-primary">
                     11
                 </button>
             </div>
             <div style="  width: 19%; margin-left: 1%; ">
-                <button @onclick="(e => SelectedTable(7))" style="width: 58px;height: 46px; margin-left: 7px;margin-right: 6px; margin-top: 20%;" class="Tafel btn btn-primary">
+                <button type="button" @onclick="(e => SelectedTable(7))" style="width: 58px;height: 46px; margin-left: 7px;margin-right: 6px; margin-top: 20%;" class="Tafel btn btn-primary">
                     7
                 </button>
-                <button @onclick="(e => SelectedTable(9))" style=" width: 59px; height: 45px; margin-left: 7px; margin-right: 33px;  margin-top: 55%;" class="Tafel btn btn-primary">
+                <button type="button" @onclick="(e => SelectedTable(9))" style=" width: 59px; height: 45px; margin-left: 7px; margin-right: 33px;  margin-top: 55%;" class="Tafel btn btn-primary">
                     9
                 </button>
             </div>
-            <input id="2" type="button" value="volgende" class="buttons" @onclick="NextDiv" style="float:right" />
 
         </div>
+        <input id="3" type="button" value="volgende" class="buttons btn btn-primary" @onclick="NextDiv" style="float:right" />
     </div>
-
 </form>
+<form>
+    <div id="div5" class="divs CHidden">
+
+        <div style="background-color: #ffffff;   width: 65%; height: 37%;  margin-left: 18%; margin-top: 62px; padding: 1% 4% 7% 1%;">
+            <h1> Overzicht</h1>
+            <div class="form-inline  form-group">
+                <label for="Datum">Datum</label>
+
+                <label class="form-controls">@CreateRes.date</label>
+            </div>
+            <div class="form-inline form-group ">
+                <label for="Dagdeel">Dagdeel</label>
+
+                <label class="form-controls">@CreateRes.Daypart</label>
+            </div>
+            <div class="form-inline form-group ">
+                <label for="Dagdeel">Naam</label>
+
+                <label class="form-controls">@CreateRes.FullName</label>
+            </div>
+            <div class="form-inline form-group ">
+                <label for="Dagdeel">E-mail</label>
+
+                <labels class="form-controls" >@CreateRes.Email</labels>
+            </div>
+            <div class="form-inline form-group ">
+                <label for="Dagdeel">Aantal personen</label>
+
+                <label class="form-controls">@CreateRes.Amount</label>
+            </div>
+            <div class="form-inline form-group ">
+                <label for="Dagdeel">Tafel</label>
+
+                <label class="form-controls">@CreateRes.Table</label>
+            </div>
+
+
+
+            <button type="submit" class="btn btn-primary" style="float:left">
+                <a href="/Datum">terug</a>
+            </button>
+
+            <button type="submit" class="btn btn-primary" style="float:right">
+                Reservering
+            </button>
+        </div>
+    </div>
+</form>
+
+
+
 @code{
 
-        async Task ShowAlert()
-        {
-            await JsRuntime.InvokeVoidAsync("CreateAlert");
-        }
-        async Task NextDiv()
+    async Task NextDiv()
+    {
+        if (IsValidEmail(CreateRes.Email) != false)
         {
             await JsRuntime.InvokeVoidAsync("NextDiv");
         }
+        
+        
+  
+    }
 
 
-
-public string Message;
+    public int i;
+    SqlConnection con = new SqlConnection();
+    public string Message;
     Reservation CreateRes = new Reservation();
     void SelectedTable(int SelectedTable)
     {
-        CreateRes.tafel = SelectedTable;
-        Message = "Tafel Nummer gekozen" + CreateRes.tafel.ToString();
+        CreateRes.Table = SelectedTable;
+        Message = "Tafel Nummer gekozen" + CreateRes.Table.ToString();
         Debug.WriteLine(Message);
 
 
@@ -162,16 +231,65 @@ public string Message;
     {
         if (SelectedDaypart == false)
         {
-            CreateRes.dagdeel = "lunch";
+            CreateRes.Daypart = "lunch";
         }
         else
         {
-            CreateRes.dagdeel = "diner";
+            CreateRes.Daypart = "diner";
         }
-        Message = "daypart  gekozen" + CreateRes.dagdeel.ToString();
+        Message = "daypart  gekozen" + CreateRes.Daypart.ToString();
         Debug.WriteLine(Message);
+    }
 
 
+    bool IsValidEmail(string email)
+    {
+        try
+        {
+            var addr = new System.Net.Mail.MailAddress(email);
+            return addr.Address == email;
+        }
+        catch
+        {
+            return false;
+        }
+    }
+    void InsertUser()
+    {
+        
+
+
+        if (IsValidEmail(CreateRes.Email) != false)
+        {
+            con.SqlQuery("INSERT INTO `guest`(`FullName`, `Email`) VALUES (@Fullname,@Email)");
+            con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
+            con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
+            con.NonQueryEx();
+            InsertReservation();
+        }
+    }
+
+    void InsertReservation()
+    {
+        con.SqlQuery("SELECT `id_Guest` FROM `guest` WHERE `FullName`=@Fullname AND `Email`=@Email");
+        con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
+        con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
+        con.QueryEx();
+
+        foreach (DataRow dr in con.QueryEx().Rows)
+        {
+            string id = dr[0].ToString();
+
+            con.SqlQuery("INSERT INTO `reservation`(`Date`, `DayPart`, `TableNumber`, `Guest`, `Amount`) VALUES (@Date,@Daypart,@TableNumber,@Guest,@Amount)");
+            con.Cmd.Parameters.AddWithValue("@Date", CreateRes.date);
+            con.Cmd.Parameters.AddWithValue("@Daypart", CreateRes.Daypart);
+            con.Cmd.Parameters.AddWithValue("@TableNumber", CreateRes.Table);
+            con.Cmd.Parameters.AddWithValue("@Guest", id);
+            con.Cmd.Parameters.AddWithValue("@Amount", CreateRes.Amount);
+            con.NonQueryEx();
+
+        }
 
     }
+
 }
