--- a/ReservationAdmin/Component/ReservationCreate.razor
+++ b/ReservationAdmin/Component/ReservationCreate.razor
@@ -1,7 +1,6 @@
-﻿@using Microsoft.AspNetCore.Components.Web
-@using System.Diagnostics
+﻿@using Microsoft.AspNetCore.Components.Web;
+@using System.Diagnostics;
 @using System.Data;
-;
 @using ReservationAdmin.Models;
 
 <form>
